force-app/main/default/objects/E_Form_Master_Data__c/fields/Alamat__c.field-meta.xml
<CustomField>
    <fullName>Alamat__c</fullName>
    <label>Alamat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>