force-app/main/default/objects/E_Form_Master_Data__c/fields/Alamat_Domisili__c.field-meta.xml
<CustomField>
    <fullName>Alamat_Domisili__c</fullName>
    <label>Alamat Domisili</label>
    <length>255</length>
    <type>Text</type>
</CustomField>