force-app/main/default/objects/E_Form_Master_Data__c/fields/Alamat_Domisili_Controlling_Person__c.field-meta.xml
<CustomField>
    <fullName>Alamat_Domisili_Controlling_Person__c</fullName>
    <label>Alamat Domisili Controlling Person</label>
    <length>50</length>
    <type>Text</type>
</CustomField>