force-app/main/default/objects/E_Form_Master_Data__c/fields/Alamat_Terbaru_TP__c.field-meta.xml
<CustomField>
    <fullName>Alamat_Terbaru_TP__c</fullName>
    <label>Alamat Terbaru TP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>