force-app/main/default/objects/E_Form_Master_Data__c/fields/Alasan__c.field-meta.xml
<CustomField>
    <fullName>Alasan__c</fullName>
    <label>Alasan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>