force-app/main/default/objects/E_Form_Master_Data__c/fields/Alasan_CP_3__c.field-meta.xml
<CustomField>
    <fullName>Alasan_CP_3__c</fullName>
    <label>Alasan CP 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>