force-app/main/default/objects/E_Form_Master_Data__c/fields/Alasan_Lainnya__c.field-meta.xml
<CustomField>
    <fullName>Alasan_Lainnya__c</fullName>
    <label>Alasan Lainnya</label>
    <length>255</length>
    <type>Text</type>
</CustomField>