force-app/main/default/objects/E_Form_Master_Data__c/fields/Alasan_Penarikan_Dana__c.field-meta.xml
<CustomField>
    <fullName>Alasan_Penarikan_Dana__c</fullName>
    <label>Alasan Penarikan Dana</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Butuh dana</fullName>
            </value>
            <value>
                <fullName>Di investasikan ke instrumen lain</fullName>
            </value>
            <value>
                <fullName>Keluarga</fullName>
            </value>
            <value>
                <fullName>Profit Taking</fullName>
            </value>
            <value>
                <fullName>Hasil investasi kurang memuaskan</fullName>
            </value>
            <value>
                <fullName>Premi/Kontribusi mahal</fullName>
            </value>
            <value>
                <fullName>Pertanggungan/perlindungan asuransi tidak menyeluruh</fullName>
            </value>
            <value>
                <fullName>Polis jatuh tempo</fullName>
            </value>
            <value>
                <fullName>Layanan Perusahaan</fullName>
            </value>
            <value>
                <fullName>Layanan tenaga pemasar</fullName>
            </value>
            <value>
                <fullName>Lainnya</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>