force-app/main/default/objects/E_Form_Master_Data__c/fields/Alasan_perubahan_tinggi_berat_badan_TP__c.field-meta.xml
<CustomField>
    <fullName>Alasan_perubahan_tinggi_berat_badan_TP__c</fullName>
    <label>Alasan perubahan tinggi berat badan TP</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>