force-app/main/default/objects/E_Form_Master_Data__c/fields/Alasan_Tidak_Ada_NPWP2__c.field-meta.xml
<CustomField>
    <fullName>Alasan_Tidak_Ada_NPWP2__c</fullName>
    <label>Alasan Tidak Ada NPWP2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>