force-app/main/default/objects/E_Form_Master_Data__c/fields/Alat_bantu_TP__c.field-meta.xml
<CustomField>
    <fullName>Alat_bantu_TP__c</fullName>
    <label>Alat bantu TP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>