force-app/main/default/objects/E_Form_Master_Data__c/fields/Alat_bantu_yang_digunakan__c.field-meta.xml
<CustomField>
    <fullName>Alat_bantu_yang_digunakan__c</fullName>
    <label>Alat bantu yang digunakan</label>
    <length>70</length>
    <type>Text</type>
</CustomField>