force-app/main/default/objects/E_Form_Master_Data__c/fields/Apakah_Badan_Usaha_ini_melakukan_pelapor__c.field-meta.xml
<CustomField>
    <fullName>Apakah_Badan_Usaha_ini_melakukan_pelapor__c</fullName>
    <label>Apakah Badan Usaha ini melakukan pelapor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segmentation</valueSetName>
    </valueSet>
</CustomField>