force-app/main/default/objects/E_Form_Master_Data__c/fields/Apakah_Controlling_Person_ini_melakukan__c.field-meta.xml
<CustomField>
    <fullName>Apakah_Controlling_Person_ini_melakukan__c</fullName>
    <label>Apakah Controlling Person ini melakukan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segmentation</valueSetName>
    </valueSet>
</CustomField>