force-app/main/default/objects/E_Form_Master_Data__c/fields/Berapa_Batang_PP__c.field-meta.xml
<CustomField>
    <fullName>Berapa_Batang_PP__c</fullName>
    <label>Berapa Batang PP</label>
    <length>4</length>
    <type>Text</type>
</CustomField>