force-app/main/default/objects/E_Form_Master_Data__c/fields/Berapa_Batang_TP__c.field-meta.xml
<CustomField>
    <fullName>Berapa_Batang_TP__c</fullName>
    <label>Berapa Batang TP</label>
    <length>3</length>
    <type>Text</type>
</CustomField>