force-app/main/default/objects/E_Form_Master_Data__c/fields/Berat_Badan__c.field-meta.xml
<CustomField>
    <fullName>Berat_Badan__c</fullName>
    <label>Berat Badan</label>
    <length>4</length>
    <type>Text</type>
</CustomField>