force-app/main/default/objects/E_Form_Master_Data__c/fields/Berat_Badan_TP__c.field-meta.xml
<CustomField>
    <fullName>Berat_Badan_TP__c</fullName>
    <label>Berat Badan TP</label>
    <length>3</length>
    <type>Text</type>
</CustomField>