force-app/main/default/objects/E_Form_Master_Data__c/fields/Biaya_Transaksi__c.field-meta.xml
<CustomField>
    <fullName>Biaya_Transaksi__c</fullName>
    <label>Biaya Transaksi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>