force-app/main/default/objects/E_Form_Master_Data__c/fields/Bidang_Usaha__c.field-meta.xml
<CustomField>
    <fullName>Bidang_Usaha__c</fullName>
    <label>Bidang Usaha</label>
    <length>50</length>
    <type>Text</type>
</CustomField>