force-app/main/default/objects/E_Form_Master_Data__c/fields/Bidang_Usaha_TP__c.field-meta.xml
<CustomField>
    <fullName>Bidang_Usaha_TP__c</fullName>
    <label>Bidang Usaha TP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>