force-app/main/default/objects/E_Form_Master_Data__c/fields/cabang__c.field-meta.xml
<CustomField>
    <fullName>cabang__c</fullName>
    <label>cabang</label>
    <length>100</length>
    <type>Text</type>
</CustomField>