force-app/main/default/objects/E_Form_Master_Data__c/fields/case_type__c.field-meta.xml
<CustomField>
    <fullName>case_type__c</fullName>
    <label>case type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pengalihan subdana yang telah terhimpun saja (Pengalihan Dana)</fullName>
                <label>Switching</label>
            </value>
            <value>
                <fullName>Perubahan untuk alokasi subdana yang akan dibayarkan berikutnya saja (Alokasi Dana)</fullName>
                <label>Redirection</label>
            </value>
            <value>
                <fullName>Perubahan untuk keduanya, baik subdana yang terhimpun maupun yang akan dibayarkan berikutnya (Pengalihan Dana &amp; Alokasi Dana)</fullName>
                <label>Switching &amp; Redirection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>