force-app/main/default/objects/E_Form_Master_Data__c/fields/code_subdana_1__c.field-meta.xml
<CustomField>
    <fullName>code_subdana_1__c</fullName>
    <label>code subdana 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>