force-app/main/default/objects/E_Form_Master_Data__c/fields/code_subdana_2__c.field-meta.xml
<CustomField>
    <fullName>code_subdana_2__c</fullName>
    <label>code subdana 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>