force-app/main/default/objects/E_Form_Master_Data__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rp</fullName>
                <label>Rupiah</label>
            </value>
            <value>
                <fullName>USD</fullName>
                <label>US Dollar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>