force-app/main/default/objects/E_Form_Master_Data__c/fields/Email_Sebelumnya_TP__c.field-meta.xml
<CustomField>
    <fullName>Email_Sebelumnya_TP__c</fullName>
    <label>Email Sebelumnya TP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>