force-app/main/default/objects/E_Form_Master_Data__c/fields/Email_Terbaru__c.field-meta.xml
<CustomField>
    <fullName>Email_Terbaru__c</fullName>
    <label>Email Terbaru</label>
    <length>50</length>
    <type>Text</type>
</CustomField>