force-app/main/default/objects/E_Form_Master_Data__c/fields/GenderTP__c.field-meta.xml
<CustomField>
    <fullName>GenderTP__c</fullName>
    <label>GenderTP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segmentation</valueSetName>
    </valueSet>
</CustomField>