force-app/main/default/objects/E_Form_Master_Data__c/fields/hubungan_dengan_pemilik_rekening__c.field-meta.xml
<CustomField>
    <fullName>hubungan_dengan_pemilik_rekening__c</fullName>
    <label>hubungan dengan pemilik rekening</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diri Sendiri</fullName>
            </value>
            <value>
                <fullName>Suami/Istri</fullName>
            </value>
            <value>
                <fullName>Anak</fullName>
            </value>
            <value>
                <fullName>Orang Tua</fullName>
            </value>
            <value>
                <fullName>Wali yang sah</fullName>
            </value>
            <value>
                <fullName>Karyawan</fullName>
            </value>
            <value>
                <fullName>Lainnya</fullName>
            </value>
            <value>
                <fullName>Orang Tua/Anak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>