force-app/main/default/objects/E_Form_Master_Data__c/fields/informasi_pajak_luar_negeri__c.field-meta.xml
<CustomField>
    <fullName>informasi_pajak_luar_negeri__c</fullName>
    <description>INFORMASI PERPAJAKAN LUAR NEGERI</description>
    <inlineHelpText>INFORMASI PERPAJAKAN LUAR NEGERI</inlineHelpText>
    <label>informasi pajak luar negeri</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tidak</fullName>
                <label>TIDAK, Jika Anda memiliki Indicia, harap mengisi form pengunakapan *Indicia: memilik/ kewarganegaraan/tempat lahi /alamat/nomor telepon/penggunaan kuasa hukum di luar indonesia.</label>
            </value>
            <value>
                <fullName>Ya</fullName>
                <label>YA, mohon mengisi Formulir Pernyataan Persetujuan Atas Pengungkapan Informasi Perpajakan Asing Perorangan/Badan Usaha.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>