force-app/main/default/objects/E_Form_Master_Data__c/fields/Jabatan__c.field-meta.xml
<CustomField>
    <fullName>Jabatan__c</fullName>
    <label>Jabatan</label>
    <length>50</length>
    <type>Text</type>
</CustomField>