force-app/main/default/objects/E_Form_Master_Data__c/fields/Jabatan_TP__c.field-meta.xml
<CustomField>
    <fullName>Jabatan_TP__c</fullName>
    <label>Jabatan TP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>