force-app/main/default/objects/E_Form_Master_Data__c/fields/Jenis_Badan_Usaha__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Badan_Usaha__c</fullName>
    <label>Jenis Badan Usaha</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segmentation</valueSetName>
    </valueSet>
</CustomField>