force-app/main/default/objects/E_Form_Master_Data__c/fields/Jenis_Bdn_Usaha__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Bdn_Usaha__c</fullName>
    <description>digunakan untuk form CRS Badan Usaha</description>
    <inlineHelpText>Jenis Badan Usaha</inlineHelpText>
    <label>Jenis Badan Usaha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perusahaan Investasi profesional yang berada di negara yang tidak termasuk Yurisdiksi Mitra&apos; dan yang dikelola oleh Lembaga Keuangan.</fullName>
            </value>
            <value>
                <fullName>Lembaga Keuangan selain Perusahaan Investasi profesional yang berada di negara selain Indonesia dan Amerika dan yang dikelola oleh Lembaga Keuangan.</fullName>
            </value>
            <value>
                <fullName>Lembaga Non Keuangan Aktif -Perusahaan Terbuka yang sahamnya aktif diperdagangkan, Lembaga Pemerintah atau Bank Sentral, atau Organisasi Interasional.</fullName>
            </value>
            <value>
                <fullName>Lembaga Non Keuangan Aktif selain Perusahaan Terbuka yang sahamnya aktif diperdagangkan, Lembaga Pemerintah atau Bank Sentral, atau Organisasi Internasional.</fullName>
            </value>
            <value>
                <fullName>Lembaga Non Keuangan Pasif.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>