force-app/main/default/objects/E_Form_Master_Data__c/fields/Jenis_Identitas__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Identitas__c</fullName>
    <label>Jenis Identitas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KTP</fullName>
            </value>
            <value>
                <fullName>Paspor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>