force-app/main/default/objects/E_Form_Master_Data__c/fields/Jenis_Identitas_Controlling_Person__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Identitas_Controlling_Person__c</fullName>
    <label>Jenis Identitas Controlling Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segmentation</valueSetName>
    </valueSet>
</CustomField>