force-app/main/default/objects/E_Form_Master_Data__c/fields/jumlah__c.field-meta.xml
<CustomField>
    <fullName>jumlah__c</fullName>
    <label>jumlah</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>