force-app/main/default/objects/E_Form_Master_Data__c/fields/Jumlah_Penarikan_Dana__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_Penarikan_Dana__c</fullName>
    <label>Jumlah Penarikan Dana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>