force-app/main/default/objects/E_Form_Master_Data__c/fields/Jumlah_Setelah_Biaya_Transaksi__c.field-meta.xml
<CustomField>
    <fullName>Jumlah_Setelah_Biaya_Transaksi__c</fullName>
    <label>Jumlah Setelah Biaya Transaksi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>