force-app/main/default/objects/E_Form_Master_Data__c/fields/Kedudukan_Polis__c.field-meta.xml
<CustomField>
    <fullName>Kedudukan_Polis__c</fullName>
    <label>Kedudukan Polis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segmentation</valueSetName>
    </valueSet>
</CustomField>