force-app/main/default/objects/E_Form_Master_Data__c/fields/Kewarganegaraan__c.field-meta.xml
<CustomField>
    <fullName>Kewarganegaraan__c</fullName>
    <label>Kewarganegaraan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>