force-app/main/default/objects/E_Form_Master_Data__c/fields/Kode_Pos__c.field-meta.xml
<CustomField>
    <fullName>Kode_Pos__c</fullName>
    <label>Kode Pos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>