force-app/main/default/objects/E_Form_Master_Data__c/fields/Kode_Pos_Controlling_Persong__c.field-meta.xml
<CustomField>
    <fullName>Kode_Pos_Controlling_Persong__c</fullName>
    <label>Kode Pos Controlling Persong</label>
    <length>255</length>
    <type>Text</type>
</CustomField>