force-app/main/default/objects/E_Form_Master_Data__c/fields/Kota__c.field-meta.xml
<CustomField>
    <fullName>Kota__c</fullName>
    <label>Kota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>