force-app/main/default/objects/E_Form_Master_Data__c/fields/Kota_Controlling_Person__c.field-meta.xml
<CustomField>
    <fullName>Kota_Controlling_Person__c</fullName>
    <label>Kota Controlling Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>