force-app/main/default/objects/E_Form_Master_Data__c/fields/lainnya__c.field-meta.xml
<CustomField>
    <fullName>lainnya__c</fullName>
    <label>lainnya</label>
    <length>100</length>
    <type>Text</type>
</CustomField>