force-app/main/default/objects/E_Form_Master_Data__c/fields/Log_Book_Activitiy_Detail__c.field-meta.xml
<CustomField>
    <fullName>Log_Book_Activitiy_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log Book Activitiy Detail</label>
    <referenceTo>Log_Book_Activitiy_Detail__c</referenceTo>
    <relationshipLabel>E-Forms Master Data</relationshipLabel>
    <relationshipName>E_Forms_Master_Data</relationshipName>
    <type>Lookup</type>
</CustomField>