force-app/main/default/objects/E_Form_Master_Data__c/fields/Mata_Uang__c.field-meta.xml
<CustomField>
    <fullName>Mata_Uang__c</fullName>
    <label>Mata Uang</label>
    <length>30</length>
    <type>Text</type>
</CustomField>