force-app/main/default/objects/E_Form_Master_Data__c/fields/Nama_Bank__c.field-meta.xml
<CustomField>
    <fullName>Nama_Bank__c</fullName>
    <label>Nama Bank</label>
    <length>50</length>
    <type>Text</type>
</CustomField>