force-app/main/default/objects/E_Form_Master_Data__c/fields/Nama_Controlling_Person_Perusahaan__c.field-meta.xml
<CustomField>
    <fullName>Nama_Controlling_Person_Perusahaan__c</fullName>
    <label>Nama Controlling Person Perusahaan</label>
    <length>50</length>
    <type>Text</type>
</CustomField>