force-app/main/default/objects/E_Form_Master_Data__c/fields/Nama_Lengkap__c.field-meta.xml
<CustomField>
    <fullName>Nama_Lengkap__c</fullName>
    <label>Nama  Lengkap</label>
    <length>50</length>
    <type>Text</type>
</CustomField>