force-app/main/default/objects/E_Form_Master_Data__c/fields/Nama_Pemilik_Polis__c.field-meta.xml
<CustomField>
    <fullName>Nama_Pemilik_Polis__c</fullName>
    <label>Nama Pemilik Polis</label>
    <length>50</length>
    <type>Text</type>
</CustomField>