force-app/main/default/objects/E_Form_Master_Data__c/fields/Nama_Perusahaan_TP__c.field-meta.xml
<CustomField>
    <fullName>Nama_Perusahaan_TP__c</fullName>
    <label>Nama Perusahaan TP</label>
    <length>70</length>
    <type>Text</type>
</CustomField>