force-app/main/default/objects/E_Form_Master_Data__c/fields/Nama_Pihak_Berwenang_Pemegang_Polis__c.field-meta.xml
<CustomField>
    <fullName>Nama_Pihak_Berwenang_Pemegang_Polis__c</fullName>
    <label>Nama Pihak Berwenang Pemegang Polis</label>
    <length>50</length>
    <type>Text</type>
</CustomField>