force-app/main/default/objects/E_Form_Master_Data__c/fields/Nama_Produk__c.field-meta.xml
<CustomField>
    <fullName>Nama_Produk__c</fullName>
    <label>Nama Produk</label>
    <length>50</length>
    <type>Text</type>
</CustomField>