force-app/main/default/objects/E_Form_Master_Data__c/fields/nama_rekening__c.field-meta.xml
<CustomField>
    <fullName>nama_rekening__c</fullName>
    <label>nama rekening</label>
    <length>100</length>
    <type>Text</type>
</CustomField>