force-app/main/default/objects/E_Form_Master_Data__c/fields/nama_subdana_2__c.field-meta.xml
<CustomField>
    <fullName>nama_subdana_2__c</fullName>
    <label>nama subdana 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>