force-app/main/default/objects/E_Form_Master_Data__c/fields/Nama_Tertanggung__c.field-meta.xml
<CustomField>
    <fullName>Nama_Tertanggung__c</fullName>
    <label>Nama Tertanggung</label>
    <length>50</length>
    <type>Text</type>
</CustomField>