force-app/main/default/objects/E_Form_Master_Data__c/fields/Negara_Domisili__c.field-meta.xml
<CustomField>
    <fullName>Negara_Domisili__c</fullName>
    <label>Negara Domisili</label>
    <length>30</length>
    <type>Text</type>
</CustomField>