force-app/main/default/objects/E_Form_Master_Data__c/fields/Negara_Pelaporan_Pajak__c.field-meta.xml
<CustomField>
    <fullName>Negara_Pelaporan_Pajak__c</fullName>
    <label>Negara Pelaporan Pajak</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amerika</fullName>
            </value>
            <value>
                <fullName>Selain Amerika</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>