force-app/main/default/objects/E_Form_Master_Data__c/fields/Negara_Terdaftar_Wajib_Pajak__c.field-meta.xml
<CustomField>
    <fullName>Negara_Terdaftar_Wajib_Pajak__c</fullName>
    <label>Negara Terdaftar Wajib Pajak</label>
    <length>50</length>
    <type>Text</type>
</CustomField>