force-app/main/default/objects/E_Form_Master_Data__c/fields/Negara_Terdaftar_Wajib_Pajak_CP_1__c.field-meta.xml
<CustomField>
    <fullName>Negara_Terdaftar_Wajib_Pajak_CP_1__c</fullName>
    <label>Negara Terdaftar Wajib Pajak CP 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>