force-app/main/default/objects/E_Form_Master_Data__c/fields/Nilai_Tunai_Sementara__c.field-meta.xml
<CustomField>
    <fullName>Nilai_Tunai_Sementara__c</fullName>
    <label>Nilai Tunai Sementara</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>