force-app/main/default/objects/E_Form_Master_Data__c/fields/No_Rekening__c.field-meta.xml
<CustomField>
    <fullName>No_Rekening__c</fullName>
    <label>No Rekening</label>
    <length>30</length>
    <type>Text</type>
</CustomField>