force-app/main/default/objects/E_Form_Master_Data__c/fields/Nominal__c.field-meta.xml
<CustomField>
    <fullName>Nominal__c</fullName>
    <label>Nominal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>