force-app/main/default/objects/E_Form_Master_Data__c/fields/Nomor_Anggaran_Dasar_Perusahaan__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Anggaran_Dasar_Perusahaan__c</fullName>
    <label>Nomor Anggaran Dasar Perusahaan</label>
    <length>30</length>
    <type>Text</type>
</CustomField>