force-app/main/default/objects/E_Form_Master_Data__c/fields/Nomor_Identitas_Controlling_Person__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Identitas_Controlling_Person__c</fullName>
    <label>Nomor Identitas Controlling Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>