force-app/main/default/objects/E_Form_Master_Data__c/fields/Nomor_Kartu_Identitas__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Kartu_Identitas__c</fullName>
    <label>Nomor Kartu Identitas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>