force-app/main/default/objects/E_Form_Master_Data__c/fields/Nomor_KTP_Terbaru__c.field-meta.xml
<CustomField>
    <fullName>Nomor_KTP_Terbaru__c</fullName>
    <label>Nomor KTP Terbaru</label>
    <length>255</length>
    <type>Text</type>
</CustomField>