force-app/main/default/objects/E_Form_Master_Data__c/fields/Nomor_Polis__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Polis__c</fullName>
    <label>Nomor Polis</label>
    <length>120</length>
    <type>Text</type>
</CustomField>