force-app/main/default/objects/E_Form_Master_Data__c/fields/nomor_rekening__c.field-meta.xml
<CustomField>
    <fullName>nomor_rekening__c</fullName>
    <label>nomor rekening</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>