force-app/main/default/objects/E_Form_Master_Data__c/fields/Nomor_TDP_SDP__c.field-meta.xml
<CustomField>
    <fullName>Nomor_TDP_SDP__c</fullName>
    <label>Nomor TDP SDP</label>
    <length>13</length>
    <type>Text</type>
</CustomField>