force-app/main/default/objects/E_Form_Master_Data__c/fields/Nomor_Telpon__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Telpon__c</fullName>
    <label>Nomor Telpon</label>
    <length>20</length>
    <type>Text</type>
</CustomField>