force-app/main/default/objects/E_Form_Master_Data__c/fields/NPWP1__c.field-meta.xml
<CustomField>
    <fullName>NPWP1__c</fullName>
    <label>NPWP1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>