force-app/main/default/objects/E_Form_Master_Data__c/fields/NPWP2__c.field-meta.xml
<CustomField>
    <fullName>NPWP2__c</fullName>
    <label>NPWP2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>