force-app/main/default/objects/E_Form_Master_Data__c/fields/NPWP__c.field-meta.xml
<CustomField>
    <fullName>NPWP__c</fullName>
    <label>NPWP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>