force-app/main/default/objects/E_Form_Master_Data__c/fields/NPWP_CP_1__c.field-meta.xml
<CustomField>
    <fullName>NPWP_CP_1__c</fullName>
    <label>NPWP CP 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>