force-app/main/default/objects/E_Form_Master_Data__c/fields/Pasport__c.field-meta.xml
<CustomField>
    <fullName>Pasport__c</fullName>
    <label>Pasport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>