force-app/main/default/objects/E_Form_Master_Data__c/fields/Pasport_CP__c.field-meta.xml
<CustomField>
    <fullName>Pasport_CP__c</fullName>
    <label>Pasport CP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>