force-app/main/default/objects/E_Form_Master_Data__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Virtual Account</fullName>
            </value>
            <value>
                <fullName>OB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>