force-app/main/default/objects/E_Form_Master_Data__c/fields/pekerjaan__c.field-meta.xml
<CustomField>
    <fullName>pekerjaan__c</fullName>
    <label>pekerjaan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>