force-app/main/default/objects/E_Form_Master_Data__c/fields/Pekerjaan_TP__c.field-meta.xml
<CustomField>
    <fullName>Pekerjaan_TP__c</fullName>
    <label>Pekerjaan TP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>