force-app/main/default/objects/E_Form_Master_Data__c/fields/Pendapatan__c.field-meta.xml
<CustomField>
    <fullName>Pendapatan__c</fullName>
    <label>Pendapatan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>