force-app/main/default/objects/E_Form_Master_Data__c/fields/Penerima_Manfaat_3__c.field-meta.xml
<CustomField>
    <fullName>Penerima_Manfaat_3__c</fullName>
    <label>Penerima Manfaat 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>