force-app/main/default/objects/E_Form_Master_Data__c/fields/Penghasilan_per_Bulan__c.field-meta.xml
<CustomField>
    <fullName>Penghasilan_per_Bulan__c</fullName>
    <label>Penghasilan per Bulan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>