force-app/main/default/objects/E_Form_Master_Data__c/fields/Pengkinian_Data__c.field-meta.xml
<CustomField>
    <fullName>Pengkinian_Data__c</fullName>
    <label>Pengkinian Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segmentation</valueSetName>
    </valueSet>
</CustomField>